--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -1,4 +1,4 @@
-#### 概念与术语
+#### 概念与术语  
 【信息】（香农1948）  
 【信息系统】（GB 17859）  
 【信息资产】  
@@ -11,14 +11,18 @@
 《图灵完备》  
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
-2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。
-#### 证明
+2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
+#### 分析  
+1. 给一个加密变换，分析说明其是否具有完善保密性。  
+2. 给一段不安全的C代码，指出问题，并予以修改。  
+3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
+#### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
-#### 设计
+#### 设计  
 1.设计一段栈计算机指令，完成以下任务：y=x\*x+(a-b)  
 2.解释以下栈计算机指令的完成的功能。………………  
 
-#### 其他样题
+#### 其他样题  
 1.1900年，数学家（大卫·希尔伯特）提出了23个数学问题，其中第10问题，（丢番图）方程有解的可判定性问题，在1936年被（图灵）证明是不可判定的。
 在这一证明过程中提出了著名的（图灵机）模型。  
 2.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
