增加填空、选择、判断

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -9,6 +9,12 @@
 【风险】  
 【定性/定量风险评估】  
 《图灵完备》  
+#### 填空  
+
+#### 选择  
+
+#### 判断对错  
+
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
