--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -34,3 +34,88 @@
 2.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
 3.将风险划分成级别的风险评估方法为（定性）风险评估  
 4.给出货币价值的风险评估方法为（定量）风险评估
+    
+    
+#### 第一次课堂报告各小组提供的小题(编号代表提供的小组序号)      
+【02】BGP和OSPF在路由协议范围中，分别是什么协议的缩写？   
+BGP：边界网关协议      
+OSPF：开放最短路径优先协议    
+             
+【03】由密歇根大学Jon Oberheide等人在The CloudAV? Architecture: N-Version Antivirus in the     
+Network Cloud中提出的基于云计算的病毒查杀模型中， “N-Version Antivirus”指的是（）    
+A.应用N版本杀毒软件检测         B.应用一组异构检测引擎检测       
+C.按提交队列顺序循环查杀N次     C.应用不定方式鉴别算法检测      
+         
+【06】基于数据挖掘的入侵检测系统主要由数据采集模块，数据预处理模块，以及（D）等部分组成。    
+a.数据分类模块  b.规则匹配模块  c.规则库  d.决策模块         
+A. b,c,d  B. a,c,d   C. a,b,c  D. a,b,c,d          
+      
+【07】下列说法中正确的是:(C)    
+A.CS97方案是在1998年提出的。    
+B.关联性是CS97签名方案的安全性要求之一。     
+C.CS97签名方案以离散对数和RSA算法为基础。     
+D.CS97签名方案的签名长度依赖于群成员个数。     
+    
+【11】下面crytbb加密数据不可能用什么方式?（C）    
+A 完全同态加密 B 对称加密   C md5  D 都不可以     
+    
+【12】双线性对在密码中的正面应用与谁有重要关系 (B)     
+A. shamir    B. dan?boneh  C. hellman   D. waters     
+      
+【13】第一次的题目：Lucky13攻击是在TLS/DTLS协议在（A）模式加密下的攻击。     
+A.CBC    B.EBC    C.CFB     D.OFB     
+     
+       
+### 第二次课堂报告各小组提供的小题(编号代表提供的小组序号)      
+【01】rabin OT哪一年提出的？     
+    
+【05】对格以及格密码的描述中，错误的是（D）    
+A.格是高维空间中的点集。    
+B.格可以有多个格基。    
+C.格密码可以抵抗量子计算攻击。    
+D.格密码LWE加密过程相对传统加密算法复杂      
+      
+【06】盲签名的性质有（C）        
+a.不可伪造性 b.不可抵赖性 c.盲性 d.不可跟踪性            
+(A).a,b,c   (B).b,c,d   (C).a,b,c,d   (D).a,c,d     
+     
+【07】RSA的安全性是否基于质数相乘得到的大数难以分解？     
+答案:是     
+       
+【08】下列有关差分隐私的表述正确的是(C):     
+A. ε越大，差分隐私越能保护隐私，但是数据的可用性也越差。     
+B. 指数机制适合保护数值型的数据。     
+C. 攻击者利用差分攻击的前提是需要有足够的背景知识。     
+D. 差分隐私项目RAPPOR是由Apple实现并且维护的。     
+       
+【11】公平掷币协议是谁提出的？(B)     
+A：Adleman   B: Blum   C: Shamir     D:Diffie           
+      
+【12】是谁提出了ibe(基于身份的加密)？      
+A.Shamir     B.Franklin     C.Boneh     D.Waters     
+                 
+      
+【13】门罗币的设计过程中采用了下面哪一项技术（B）     
+A.盲签名 B. 环签名 C.群签名     
+     
+【02】(3,5)的门限方案     
+ 设 m = 3，n = 5，p = 19，K = 11        
+解: 随机选取A1=7、A2=2，构造多项式 f(x)=(7x2 +2x +11) mod 19       
+将秘密分割为5份:         
+k1 = f(1) = (7*12+2*1+11) mod 19= 1      
+k2 = f(2) = (7*22+2*2+11) mod 19= 5      
+k3 = f(3) = (7*32+2*3+11) mod 19= 4     
+k4 = f(4) = (7*42+2*4+11) mod 19= 17         
+k5 = f(5) = (7*52+2*5+11) mod 19= 6          
+          
+重构f(x)             
+给定k2=5、k3=4、k5=6，重构多项式f(x):       
+5*(x-3)(x-5)/(2-3)(2-5)=5*13(x-3)(x-5)=65(x-3)(x-5)      
+4*(x-2)(x-5)/(3-2)(3-5)=4*9(x-2)(x-5)=36(x-2)(x-5)       
+6*(x-2)(x-3)/(5-2)(5-3)=6*16(x-2)(x-3)=96(x-2)(x-3)       
+f(x)=[65(x-3)(x-5)+36(x-2)(x-5)+96(x-2)(x-3)]mod19         
+ =(26x2-188x+296)mod19              
+ =7x2+2x+11       
+恢复K=f(0)=11       
+          
+             
