--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -5,10 +5,15 @@
 【威胁】【威胁主体】  
 【安全机制】  
 【脆弱性】  
-【风险评估】  
-【风险】  
+【风险评估】  【风险】  
 【定性/定量风险评估】  
+【机密性】  【完整性】  【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
+
+
 《图灵完备》  
+#### 简答  
+1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
+2.对信息系统进行安全分级主要依据什么？答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。
 #### 填空  
 
 #### 选择  
