--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -8,16 +8,22 @@
 【风险评估】  【风险】  
 【定性/定量风险评估】  
 【机密性】  【完整性】  【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
-
+【攻击面】  【攻击树】  
 
 《图灵完备》  
 #### 简答  
 1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
-2.对信息系统进行安全分级主要依据什么？答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。
+2.对信息系统进行安全分级主要依据什么？答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。  
+3.信息系统的安全管理体系由哪些部分组成？答：主要包括信息安全行政管理和信息安全技术管理两部分，前者包括信息安全策略及管理制度、信息安全机构及人员，后者包括信息系统安全建设和信息系统安全运维。  
+4.简述GDPR.答：GDPR=General Data Protection Regulation，即欧盟法规《通用数据保护条例》。法规是对关于个人数据保护和隐私保护的规范，适用于在欧洲开展业务的所有企业，要求这些企业处理个人数据的业务流程必须符合其对个人隐私和个人数据安全性保护的规定。法案于2018年5月开始强制实施，违反此规定的企业将面临公司全球收益4%或两千万欧元（取高者）的罚款。此法案对个人数据及个人隐私的保护起到了积极作用。  
+5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure
+6.简述PDCA.答：
+7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：
 #### 填空  
-
+软件脆弱性产生的top原因是：（不良的编程习惯）。
 #### 选择  
-
+1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
+命令注入  XSS  溢出  不安全算法  缺盐
 #### 判断对错  
 
 #### 计算  
