--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -8,31 +8,72 @@
 【风险评估】  【风险】  
 【定性/定量风险评估】  
 【机密性】  【完整性】  【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
-【攻击面】  【攻击树】  
+【攻击面】  【攻击树】
+【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】
+【可证明安全】  【可忽略量】  【压倒性概率】  【计算不可区分】  【问题】  【判定问题】  【P问题】  【NP问题】  【归约】  【多项式变换】  
+
+
 
 《图灵完备》  
+
 #### 简答  
 1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
 2.对信息系统进行安全分级主要依据什么？答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。  
 3.信息系统的安全管理体系由哪些部分组成？答：主要包括信息安全行政管理和信息安全技术管理两部分，前者包括信息安全策略及管理制度、信息安全机构及人员，后者包括信息系统安全建设和信息系统安全运维。  
 4.简述GDPR.答：GDPR=General Data Protection Regulation，即欧盟法规《通用数据保护条例》。法规是对关于个人数据保护和隐私保护的规范，适用于在欧洲开展业务的所有企业，要求这些企业处理个人数据的业务流程必须符合其对个人隐私和个人数据安全性保护的规定。法案于2018年5月开始强制实施，违反此规定的企业将面临公司全球收益4%或两千万欧元（取高者）的罚款。此法案对个人数据及个人隐私的保护起到了积极作用。  
-5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure
-6.简述PDCA.答：
-7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：
+5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure  
+6.简述PDCA.答：  
+7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：  
+8.chmod u+s filename之后，filename文件的权限属性发生了什么变化？答：  
+9.简述ruid和euid的区别。答：  
+10.setuid位有什么用处？答：  
+11.简述访问监测器（Reference Monitor）的NEAT原则。答：  
+12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。答：  
+13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
+>答：如Pr[x0]=0,则∀y，Pr[x0|y]=Pr[x0]=0,x0可去除。同理Pr[y0]=0可去除  
+>  由Bayes：∀y，Pr[x|y]=Pr[x] ⇒ ∀y，Pr[y|x]=Pr[y]  
+>  给定x：∀y，Pr[y|x]=Pr[y]＞0(可被加成所有密文，每个需要1个Key) ⇒ 需要大于|Y|个密钥 ⇒ |K|≥|C|  
+>  任意密码体系：|C|≥|P|。因此|K|≥|C|≥|P|。◼  
+>因此“完善保密性”的方案并不实用。  
+
 #### 填空  
-软件脆弱性产生的top原因是：（不良的编程习惯）。
+1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
+2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
+3.操作系统的保护模式同实模式的根本区别是【进程内存受保护与否】。  
+4.kerckhoffs原则是【          】。  
+5.用（P,C,K,E,D）表示密码系统的三个空间和加解密算法，那么：  
+> ∀k∈K，∃【（ek∈E，dk∈D）】∀x∈P【（dk（ek（x））=x）】  
+6.RSA加密算法的信息熵H(P|C,Ek)=【  0   】  
+7.已知定理“条件熵链式法则”为：H（X,Y）=H(Y)+H(X|Y)。其贝叶斯表述为：H（Y|X）=【  H（Y)+H(X|Y)-H（X） 】  
+
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
-命令注入  XSS  溢出  不安全算法  缺盐
+> 命令注入  XSS  溢出  不安全算法  缺盐  
+2.ring和虚拟内存都是基于隔离的安全机制，其中ring是（）和（）之间的隔离，虚拟内存是（）和（）之间的隔离。  
+> A OS 应用 应用 应用 B OS 应用 应用 OS C 应用 OS OS 应用 D 应用 应用 应用 OS  
+3.Reference Monitor与OS Kernel的关系是：（）  
+> A RM包含Kernel B Kernel包含RM C RM=Kernel D RM ∩ Kernel=φ  
 #### 判断对错  
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
 #### 分析  
-1. 给一个加密变换，分析说明其是否具有完善保密性。  
+1. 给一个加密变换，求C的概率分布，求Y|C的条件概率分布，分析说明其是否具有完善保密性。求H(P)、H(K)、H（C）。  
+>例：          a(1//4)     b(3/4)  
+>   K1(1/2)      1           2  
+>   K2(1/4)      2           3  
+>   K3(1/4)      3           4  
 2. 给一段不安全的C代码，指出问题，并予以修改。  
+△  
+△  
 3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
+4. 以下这段程序有什么安全缺陷？如何进行利用？如何进行预防？  
+ if (!access("/tmp/X", W_OK)) //access系统调用检查了真实 UID / GID 是否拥有访问文件的权限，有的话返回 0。
+{ f = open("/tmp/X", O_WRITE); write_to_file(f);  } //因为是set-uid root，所以防止用户越权写。
+else  fprintf(stderr, "Permission denied\n");    
+//问，我们可以让它做点什么吗？(注：/tmp属性为777，程序执行过程缓慢，利用的时候不可以修改代码)  
+5.
 #### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
 #### 设计  
@@ -42,9 +83,10 @@
 #### 其他样题  
 1.1900年，数学家（大卫·希尔伯特）提出了23个数学问题，其中第10问题，（丢番图）方程有解的可判定性问题，在1936年被（图灵）证明是不可判定的。
 在这一证明过程中提出了著名的（图灵机）模型。  
+2.斯蒂芬·库克因其提出的Cook定理奠定了NP完全理论的基础，获得1982年图灵奖。他的这项工作受到了他导师（王浩）所做机器定理证明中的谓词演算可满足性问题的启发，提出了布尔可满足性问题是NP完备的证明即Cook定理。
 2.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
 3.将风险划分成级别的风险评估方法为（定性）风险评估  
-4.给出货币价值的风险评估方法为（定量）风险评估
+4.给出货币价值的风险评估方法为（定量）风险评估  
     
     
 #### 第一次课堂报告各小组提供的小题(编号代表提供的小组序号)      
