--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -31,10 +31,16 @@
 12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。答：  
 13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
 >答：如Pr[x0]=0,则∀y，Pr[x0|y]=Pr[x0]=0,x0可去除。同理Pr[y0]=0可去除  
->  由Bayes：∀y，Pr[x|y]=Pr[x] ⇒ ∀y，Pr[y|x]=Pr[y]  
->  给定x：∀y，Pr[y|x]=Pr[y]＞0(可被加成所有密文，每个需要1个Key) ⇒ 需要大于|Y|个密钥 ⇒ |K|≥|C|  
->  任意密码体系：|C|≥|P|。因此|K|≥|C|≥|P|。◼  
->因此“完善保密性”的方案并不实用。  
+  由Bayes：∀y，Pr[x|y]=Pr[x] ⇒ ∀y，Pr[y|x]=Pr[y]  
+  给定x：∀y，Pr[y|x]=Pr[y]＞0(可被加成所有密文，每个需要1个Key) ⇒ 需要大于|Y|个密钥 ⇒ |K|≥|C|  
+  任意密码体系：|C|≥|P|。因此|K|≥|C|≥|P|。◼  
+因此“完善保密性”的方案并不实用。  
+
+14.给出基于密码的数据完整性保护机制的描述。  
+>答：设m为任意信息，ke为编码密钥，kv为相应的验证密码。对m的数据完整性保护如下：  
+篡改检测码的生成：  MDC←f（ke，m）  
+验证：  g（kv，m，MDC）=True，概率为1 如果MDC=f（ke，m）；g（kv，m，MDC）=False，压倒性概率  如果MDC≠f（ke，m）。  
+其中，f和g都是有效的密码变换；MDC=Manipulation Detection Code；如果f/q是概率算法，那么概率空间还可能包含一个随机输入空间。  
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -43,16 +49,23 @@
 4.kerckhoffs原则是【          】。  
 5.用（P,C,K,E,D）表示密码系统的三个空间和加解密算法，那么：  
 > ∀k∈K，∃【（ek∈E，dk∈D）】∀x∈P【（dk（ek（x））=x）】  
+
 6.RSA加密算法的信息熵H(P|C,Ek)=【  0   】  
 7.已知定理“条件熵链式法则”为：H（X,Y）=H(Y)+H(X|Y)。其贝叶斯表述为：H（Y|X）=【  H（Y)+H(X|Y)-H（X） 】  
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
 > 命令注入  XSS  溢出  不安全算法  缺盐  
+
 2.ring和虚拟内存都是基于隔离的安全机制，其中ring是（）和（）之间的隔离，虚拟内存是（）和（）之间的隔离。  
 > A OS 应用 应用 应用 B OS 应用 应用 OS C 应用 OS OS 应用 D 应用 应用 应用 OS  
+
 3.Reference Monitor与OS Kernel的关系是：（）  
 > A RM包含Kernel B Kernel包含RM C RM=Kernel D RM ∩ Kernel=φ  
+
+4.HASH函数的主要用途：（）  
+> A 消息摘要/消息指纹 B 用作数字签名（可证明安全的）C 密文正确性验证 D 实用的伪随机函数  
+
 #### 判断对错  
 
 #### 计算  
