--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -1,5 +1,5 @@
 #### 概念与术语  
-【信息】（香农1948）  
+【信息】（香农1948）任何可以减少不确定性的事物均为信息。  
 【信息系统】（GB 17859）  
 【信息资产】  
 【威胁】【威胁主体】  
@@ -7,12 +7,18 @@
 【脆弱性】  
 【风险评估】  【风险】  
 【定性/定量风险评估】  
-【机密性】  【完整性】  【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
-【攻击面】  【攻击树】
+【机密性】信息不被未授权获取的性质。  
+【完整性】信息不被未授权更改的性质。
+【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
+【攻击面】  【攻击树】  
 【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】
 【可证明安全】  【可忽略量】  【压倒性概率】  【计算不可区分】  【问题】  【判定问题】  【P问题】  【NP问题】  【归约】  【多项式变换】  
-
-
+【数字签名】为保护消息产生者对消息的非否认性（即不可抵赖发出消息的行为）而使用私有的密钥或算法对消息进行完整性保护（生成签名串），该完整性保护的签名串其他人无法在多项式时间产生，且通常该完整性保护可以被其他人在多项式时间进行验证。  
+【匿名性】同一主体在不同信息交换过程中所用身份的互相不可关联性。  
+【形式化方法】在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
+【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。
+【访问控制】  【主体】  【客体】  【访问控制策略】  【强制访问控制】  【自主访问控制】  
+【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 
 《图灵完备》  
 
@@ -42,6 +48,26 @@
 验证：  g（kv，m，MDC）=True，概率为1 如果MDC=f（ke，m）；g（kv，m，MDC）=False，压倒性概率  如果MDC≠f（ke，m）。  
 其中，f和g都是有效的密码变换；MDC=Manipulation Detection Code；如果f/q是概率算法，那么概率空间还可能包含一个随机输入空间。  
 
+15.基于公私钥的数字签名为什么可以保证非否认性？
+>数字签名本质上是通过私钥对消息进行完整性保护，由于其他人获得私钥或不使用私钥产生有意义的签名是计算上不可行的，所以保证了非否认性。
+
+16.简述BTC中的PoW机制和它的用处。
+>答：BTC产生一个区块即记账时，记账者须通过调整区块中的nonce值，使得该区块的Hash值的前n位都是0。其计算次数平均为2的n次方。记账者通过这种方式来争夺记账权。由于包含虚假记录的区块会被其他记账者舍弃，而产生区块又要消耗大量的成本，导致记账者更愿意诚实地产生区块。
+
+17.给出一张图，标出Linux操作系统中的Stack和Heap的位置。答：  
+18.如何防范缓冲区溢出？  
+>答：1.使用安全形式的printf(); 不使用printf(buffer)  
+2.Review loop bounds for off-by-one errors  
+3.避免不安全C函数(e.g. strcpy(), strcat(), sprintf(), gets(), scanf())；使用安全函数 (e.g. strncpy(), strncat(), snprintf())  
+4.插入边界检查代码；  
+5.避免使用不安全编程语言；  
+6.代码审计  
+
+19.简述防范栈溢出的StackGuard的canary机制。  
+>答：StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则停止程序执行。  
+
+20.简述防范栈溢出DEP机制和ASLR机制。  
+
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
 2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
@@ -52,7 +78,10 @@
 
 6.RSA加密算法的信息熵H(P|C,Ek)=【  0   】  
 7.已知定理“条件熵链式法则”为：H（X,Y）=H(Y)+H(X|Y)。其贝叶斯表述为：H（Y|X）=【  H（Y)+H(X|Y)-H（X） 】  
-
+8.BTC所使用的树形Hash数据结构称之为【Merkle】树。  
+9.如果能把所有的交易信息（账目），组织成为一个不可篡改的链表，就形成了自带对账功能的数字记账技术：【区块链】  
+10.一个访问控制矩阵，如果按列存储，那么就是【ACL】；而按行存储，就是【Capabilities】  
+11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
 > 命令注入  XSS  溢出  不安全算法  缺盐  
@@ -66,11 +95,35 @@
 4.HASH函数的主要用途：（）  
 > A 消息摘要/消息指纹 B 用作数字签名（可证明安全的）C 密文正确性验证 D 实用的伪随机函数  
 
-#### 判断对错  
+5.以下哪一条不是Hash函数的性质：（）
+> A混合变换（对任意输入，与均匀分布二进制串计算不可区分） B 抗碰撞 C 抗原像攻击 D 实用有效性（h的计算时间复杂度是低阶多项式的，最好是线性）
 
+6.BTC的51%算力攻击者能够：（）  
+>A Reverse transactions that he sends while he’s in control  
+B Prevent some or all transactions from gaining any confirmations  
+C Prevent some or all other generators from getting any generations  
+D Double spend Bitcoins  
+
+7.BTC的51%算力攻击者不能够：（）  
+>A Reverse other people’s transactions
+B Prevent transactions from being sent at all (they’ll show as 0/unconfirmed)
+C Change the number of coins generated per block
+D Create coins out of thin air
+E Send coins that never belonged to him
+
+
+#### 判断对错  
+1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
+2.使用对称技术实现的消息鉴别码MAC常称之为篡改检测码MDC。×  
+3.在密码学里面，随机预言机RO对任何输入都回传一个真正均匀随机的输出，对相同的输入每次都会回传相同输出。RO并不存在，将来也难以出现，因为其违反了香农熵的基本原理。√  
+4.BTC具有天然的匿名性。×  
+5.通常栈计算机的指令长度短于寄存器计算机。√  
+6.与寄存器计算机相比，栈计算机更适合于实现抽象计算机模型。√  
+7.抽象语法树（AST）通常是编译器无关的，而具体语法树（CST）是编译器相关的。AST通常用来生成IR。√  
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
+
 #### 分析  
 1. 给一个加密变换，求C的概率分布，求Y|C的条件概率分布，分析说明其是否具有完善保密性。求H(P)、H(K)、H（C）。  
 >例：          a(1//4)     b(3/4)  
@@ -78,17 +131,29 @@
 >   K2(1/4)      2           3  
 >   K3(1/4)      3           4  
 2. 给一段不安全的C代码，指出问题，并予以修改。  
-△  
-△  
+△1  void main() {  
+char buf[1024];  
+gets(buf);  
+}  
+△2  
 3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
 4. 以下这段程序有什么安全缺陷？如何进行利用？如何进行预防？  
- if (!access("/tmp/X", W_OK)) //access系统调用检查了真实 UID / GID 是否拥有访问文件的权限，有的话返回 0。
+> if (!access("/tmp/X", W_OK)) //access系统调用检查了真实 UID / GID 是否拥有访问文件的权限，有的话返回 0。
 { f = open("/tmp/X", O_WRITE); write_to_file(f);  } //因为是set-uid root，所以防止用户越权写。
 else  fprintf(stderr, "Permission denied\n");    
-//问，我们可以让它做点什么吗？(注：/tmp属性为777，程序执行过程缓慢，利用的时候不可以修改代码)  
-5.
+(注：/tmp属性为777，程序执行过程缓慢，利用的时候不可以修改代码)  
+
+5.给出一段协议，指出其存在的主要安全问题和其他问题。  
+>例1：简单协议  
+>例2：Woo-Lam协议  
+
+6.根据以下代码，判断：假设程序执行前A、B、C的密级分别为低、中、高，根据基于BLP的信息流控制模型进行分析，程序执行完成后X、Y、Z的密级应当是什么？  
+
+7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
+
 #### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
+
 #### 设计  
 1.设计一段栈计算机指令，完成以下任务：y=x\*x+(a-b)  
 2.解释以下栈计算机指令的完成的功能。………………  
@@ -96,7 +161,8 @@ else  fprintf(stderr, "Permission denied\n");
 #### 其他样题  
 1.1900年，数学家（大卫·希尔伯特）提出了23个数学问题，其中第10问题，（丢番图）方程有解的可判定性问题，在1936年被（图灵）证明是不可判定的。
 在这一证明过程中提出了著名的（图灵机）模型。  
-2.斯蒂芬·库克因其提出的Cook定理奠定了NP完全理论的基础，获得1982年图灵奖。他的这项工作受到了他导师（王浩）所做机器定理证明中的谓词演算可满足性问题的启发，提出了布尔可满足性问题是NP完备的证明即Cook定理。
+2.斯蒂芬·库克因其提出的Cook定理奠定了NP完全理论的基础，获得1982年图灵奖。他的这项工作受到了他导师（王浩）所做机器定理证明中的谓词演算可满足性问题的启发，提出了布尔可满足性问题是NP完备的证明即Cook定理。  
+3.用于BTC共识的（PoW工作量证明）思想最早由（Cynthia Dwork）和（Moni Naor）于1993年的学术论文提出。  
 2.进行风险评估时，主要考虑安全事件发生的（可能性）和（影响程度）  
 3.将风险划分成级别的风险评估方法为（定性）风险评估  
 4.给出货币价值的风险评估方法为（定量）风险评估  
