--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -131,11 +131,17 @@ E Send coins that never belonged to him
 >   K2(1/4)      2           3  
 >   K3(1/4)      3           4  
 2. 给一段不安全的C代码，指出问题，并予以修改。  
-△1  void main() {  
+>△1  void main() {  
 char buf[1024];  
 gets(buf);  
 }  
-△2  
+△2  strcpy(dst, src);  
+△3  sprintf(dst, “%s”, src);  
+△4  void getUserInfo(char *username, struct _USER_INFO_2 info){  
+WCHAR unicodeUser[UNLEN+1];  
+MultiByteToWideChar(CP_ACP, 0, username, -1, unicodeUser, sizeof(unicodeUser));  
+}  
+
 3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
 4. 以下这段程序有什么安全缺陷？如何进行利用？如何进行预防？  
 > if (!access("/tmp/X", W_OK)) //access系统调用检查了真实 UID / GID 是否拥有访问文件的权限，有的话返回 0。
