--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -156,6 +156,42 @@ else  fprintf(stderr, "Permission denied\n");
 6.根据以下代码，判断：假设程序执行前A、B、C的密级分别为低、中、高，根据基于BLP的信息流控制模型进行分析，程序执行完成后X、Y、Z的密级应当是什么？  
 
 7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
+  
+8.代码demo.c经编译后，反汇编得到的汇编代码如下，请问编译器使用了什么安全机制，其原理是什么？  
+(gdb) disas main  
+Dump of assembler code for function main: 
+0x08048394 <main+0>:    lea     0x4(%esp),%ecx  
+0x08048398 <main+4>:    and     $0xfffffff0,%esp  
+0x0804839b <main+7>:    pushl   0xfffffffc(%ecx)  
+0x0804839e <main+10>:   push    %ebp  
+0x0804839f <main+11>:   mov     %esp,%ebp  
+0x080483a1 <main+13>:   push    %ecx  
+0x080483a2 <main+14>:   sub     $0x54,%esp  
+0x080483a5 <main+17>:   mov     %gs:0x14,%eax     ;   
+0x080483ab <main+23>:   mov     %eax,0xfffffff8(%ebp)     ;   
+0x080483ae <main+26>:   xor     %eax,%eax     ; eax清零  
+0x080483b0 <main+28>:   movl    $0x1,0xffffffb4(%ebp)  
+0x080483b7 <main+35>:   movb    $0x61,0xffffffb8(%ebp)  
+0x080483bb <main+39>:   mov     $0x0,%eax  
+0x080483c0 <main+44>:   mov     0xfffffff8(%ebp),%edx     ;   
+0x080483c3 <main+47>:   xor     %gs:0x14,%edx     ;   
+0x080483ca <main+54>:   je      0x80483d1 <main+61>     ;   
+0x080483cc <main+56>:   call    0x80482fc <__stack_chk_fail@plt>     ;   
+0x080483d1 <main+61>:   add     $0x54,%esp  
+0x080483d4 <main+64>:   pop     %ecx  
+0x080483d5 <main+65>:   pop     %ebp  
+0x080483d6 <main+66>:   lea     0xfffffffc(%ecx),%esp  
+0x080483d9 <main+69>:   ret     
+End of assembler dump.  
+
+附：demo.c  
+int main() {  
+    int i;  
+    char buffer[64];  
+    i = 1;  
+    buffer[0] = 'a';  
+    return 0;  
+}  
 
 #### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
