--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -20,7 +20,7 @@
 【访问控制】  【主体】  【客体】  【访问控制策略】  【强制访问控制】  【自主访问控制】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 
-《图灵完备》  
+《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
 #### 简答  
 1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
