--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -11,14 +11,27 @@
 【完整性】信息不被未授权更改的性质。
 【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
 【攻击面】  【攻击树】  
-【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】
-【可证明安全】  【可忽略量】  【压倒性概率】  【计算不可区分】  【问题】  【判定问题】  【P问题】  【NP问题】  【归约】  【多项式变换】  
+【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】  【密码学】  【明文】  【密文】  【加密算法】  
+【可证明安全】  
+【可忽略量】  
+【压倒性概率】  
+【计算不可区分】  
+【问题】  
+【判定问题】  
+【P问题】  
+【NP问题】  
+【归约】  
+【多项式变换】  
 【数字签名】为保护消息产生者对消息的非否认性（即不可抵赖发出消息的行为）而使用私有的密钥或算法对消息进行完整性保护（生成签名串），该完整性保护的签名串其他人无法在多项式时间产生，且通常该完整性保护可以被其他人在多项式时间进行验证。  
 【匿名性】同一主体在不同信息交换过程中所用身份的互相不可关联性。  
 【形式化方法】在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
 【区块链】把所有的交易信息（账目），组织成为一个不可篡改的链表，所形成的自带对账功能的数字记账技术。
-【访问控制】  【主体】  【客体】  【访问控制策略】  【强制访问控制】  【自主访问控制】  
+【访问控制】在主体和客体及资源之间的信息流动进行安全相关的控制。信息的读写流动称之为【访问】，发起访问的主动实体称之为【主体】，被访问的实体称之为【客体】  
+【访问控制策略】  
+【强制访问控制】  
+【自主访问控制】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
+【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。
 
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
@@ -120,6 +133,26 @@ E Send coins that never belonged to him
 5.通常栈计算机的指令长度短于寄存器计算机。√  
 6.与寄存器计算机相比，栈计算机更适合于实现抽象计算机模型。√  
 7.抽象语法树（AST）通常是编译器无关的，而具体语法树（CST）是编译器相关的。AST通常用来生成IR。√  
+8.网络安全中有一些任务需要对大量的样本，进行分类、聚类、回归（预测）、异常检测、关联规则分析等工作。机器学习方法很适用于这项工作。√  
+9.网络安全中有一些任务需要对代码进行分析，获取其复杂的业务逻辑，是否存在安全漏洞，机器学习方法很适用于这项工作。×  
+10.OS管理的虚拟内存空间中，内核空间与用户空间谁在低地址处取决于数据的大小端模式。×  
+11.如数据采取大端模式，则内核空间在低地址处，否则在高地址处。×  
+12.如果程序员编写程序的时候使用了栈数据结构的多少，会影响该程序发生栈缓冲区溢出的概率。×  
+13.CPU的体系结构对栈溢出的发生具有一定的影响。√  
+14.BTC的智能合约语言是图灵完备的。×  
+15.Clark-Wilson是一个确保商业数据完整性的访问控制策略模型,由计算机科学家David D. Clark和会计师Davicl R.Wilson提出的。√  
+16.通过缓冲区溢出导致程序崩溃的先决条件是free() 函数未检查fd/bk指针。×  
+17.通过缓冲区溢出实现代码注入的先决条件是栈地址已知，栈可执行。√  
+18.通过缓冲区溢出导致程序崩溃的先决条件是未受保护的栈，通过覆盖关键信息可使程序崩溃。√  
+19.通过缓冲区溢出实现Arc注入的先决条件是free() 函数未检查fd/bk指针。
+20.防止缓冲区溢出应使用安全C函数如strcpy(), strcat(), sprintf(), gets(), scanf()。×  
+21.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），返回前会检查canary，如果canary值不变的话，则抛出异常。×  
+22.使用MAC=h(k||m)做消息鉴别是不安全的，应当使用h(k||m||k)。×  
+23.使用MAC=h(k||m)做消息鉴别是通常的做法，更为谨慎的做法是使用h(k||m||k)。√  
+24.保护模式同实模式的根本区别是管理员用户受保护与否。×  
+25.XSS是Web相关常见的脆弱性之一。√  
+26.
+
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
