--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -81,6 +81,12 @@
 
 20.简述防范栈溢出DEP机制和ASLR机制。  
 
+21.简述前后断言法。
+
+22.简述污点追踪。
+
+23.简述符号执行。
+
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
 2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
@@ -226,12 +232,15 @@ int main() {
     return 0;  
 }  
 
+9.解释以下栈计算机指令的完成的功能。………………  
+
 #### 证明  
 1.通过规约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
 
 #### 设计  
 1.设计一段栈计算机指令，完成以下任务：y=x\*x+(a-b)  
-2.解释以下栈计算机指令的完成的功能。………………  
+
+2.给定场景，设计模糊测试的方案。  
 
 #### 其他样题  
 1.1900年，数学家（大卫·希尔伯特）提出了23个数学问题，其中第10问题，（丢番图）方程有解的可判定性问题，在1936年被（图灵）证明是不可判定的。
