--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -1,10 +1,11 @@
 #### 概念与术语  
 【信息】（香农1948）任何可以减少不确定性的事物均为信息。  
 【信息系统】（GB 17859）  
-【信息资产】  
-【威胁】【威胁主体】  
-【安全机制】  
-【脆弱性】  
+【信息资产】有价值的信息和信息系统，其价值可能是购买、维护信息系统的资金投入，或信息本身的经济价值，也可能是信息被窃取或破坏后对拥有者及其他人造成的损害，损害价值的评估既包括直接损失，也包括失去客户、投资者和名誉乃至法律责任的间接损失。  
+【威胁】能够对信息资产产生破坏或滥用的潜在外部因素。既包括人为因素，也包括自然界和物理环境的因素。其中人为因素既包括来自合法用户的也包括来自非授权用户的，既包括故意的攻击也包括无意的误操作。
+【威胁主体】能够产生威胁的实体。  
+【安全机制】用来对抗威胁、避免安全事件发生的技术和方法。  
+【脆弱性】存在于信息系统中的一些弱点，可能被威胁利用从而产生对资产的破坏和滥用。  
 【风险评估】  【风险】  
 【定性/定量风险评估】  
 【机密性】信息不被未授权获取的性质。  
@@ -157,7 +158,7 @@ E Send coins that never belonged to him
 23.使用MAC=h(k||m)做消息鉴别是通常的做法，更为谨慎的做法是使用h(k||m||k)。√  
 24.保护模式同实模式的根本区别是管理员用户受保护与否。×  
 25.XSS是Web相关常见的脆弱性之一。√  
-26.
+26.威胁是外因，脆弱性是内因，二者结合造成安全事件的发生。√  
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
