--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -44,6 +44,17 @@
 5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure  
 6.简述PDCA.答：  
 7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：  
+>敌手可以：  
+1）能获得经过网络的任何消息；  
+2）是网络的一个合法使用者，因而可以发起与任何其他用户的对话；  
+3）有机会成为任何主体发出信息的接收者；  
+4）可以冒充任何别的主体给任意主体发消息。  
+>敌手不可以：  
+1）不能猜到从足够大的空间中选出的随机数；  
+2）没有正确的密钥，不能由给定的密文恢复明文；对于完善加密算法，也不能从给定的明文构造出正确的密文；  
+3）不能求出私有部分，如私钥；  
+4）不能控制计算环境中的私有区域。  
+
 8.chmod u+s filename之后，filename文件的权限属性发生了什么变化？答：  
 9.简述ruid和euid的区别。答：  
 10.setuid位有什么用处？答：  
@@ -87,6 +98,16 @@
 22.简述污点追踪。
 
 23.简述符号执行。
+
+24.简单介绍K近邻算法的思想和方法。
+
+25.简单介绍决策树的思想和方法。
+
+26.简单介绍朴素贝叶斯的思想和方法。
+
+27.简单介绍支持向量机的思想和方法。
+
+28.简单介绍神经网络、DNN及卷积神经网络。
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -335,4 +356,8 @@ f(x)=[65(x-3)(x-5)+36(x-2)(x-5)+96(x-2)(x-3)]mod19
  =7x2+2x+11       
 恢复K=f(0)=11       
           
-             
+### 第三次课堂报告各小组提供的小题(编号代表提供的小组序号)                  
+
+### 第四次课堂报告各小组提供的小题(编号代表提供的小组序号)     
+
+### 实验课相关的题目  
