--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -14,15 +14,19 @@
 【攻击面】  【攻击树】  
 【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】  【密码学】  【明文】  【密文】  【加密算法】  
 【可证明安全】  
-【可忽略量】  
-【压倒性概率】  
+【非多项式有界量】函数f(n):N→R称为关于n的任意多项式无界的，IF对任意多项式p(n),存在一个自然数n0，使得对于任意n＞n0，都有f(n)＞p(n)。  
+【可忽略量】函数ℇ(n):N→R称为关于n的一个可忽略量（ℇ(n)可忽略），IF其倒数1/ℇ(n)是关于n的一个非多项式有界的量。  
+【压倒性概率】如果ℇ(n)是一个可忽略量，那么1-ℇ(n)就是一个压倒性的量/概率。  
 【计算不可区分】  
-【问题】  
-【判定问题】  
-【P问题】  
-【NP问题】  
+【问题】问题为<Σ，L，φ>，其中，Σ：问题所用的符号集合。Σ*：Σ中有限串集合。其中L⊆Σ*：问题的所有实例集合。φ：L→Σ*。  
+ 
+【判定问题】0，1∈Σ且φ（L)⊂{0，1},记为π=<Σ，L，φ>   
+
+【P问题】DTM多项式时间可解问题。  
+【NP问题】NTM多项式时间可解（DTM多项式时间可验证）问题  
+【NPC问题】若π∈NP，且对∀π’∈NP，都有π’∝π,则π∈NPC  
 【归约】  
-【多项式变换】  
+【多项式变换】π1=<Σ1，L1，φ1>，π2=<Σ2，L2，φ2>之间，若存在以下变换，f:Σ1*→Σ2*的，f（L1）⊆L2，且∀I∈L1恒有φ1（I)=φ2（f（I）)。并且可用某个DTM程序在多项式时间内计算出f（I），则称π1可多项式变换为π2，记为π1∝π2。  
 【数字签名】为保护消息产生者对消息的非否认性（即不可抵赖发出消息的行为）而使用私有的密钥或算法对消息进行完整性保护（生成签名串），该完整性保护的签名串其他人无法在多项式时间产生，且通常该完整性保护可以被其他人在多项式时间进行验证。  
 【匿名性】同一主体在不同信息交换过程中所用身份的互相不可关联性。  
 【形式化方法】在计算机科学领域特别是软件与硬件工程领域，对系统进行的基于数学的定义、开发、验证。是理论计算机科学的应用，包括逻辑演算、形式语言、自动机、离散事件动态系统、程序语义等。  
@@ -152,6 +156,14 @@ C Change the number of coins generated per block
 D Create coins out of thin air
 E Send coins that never belonged to him
 
+8.libsafe拦截不安全的lib C函数如gets, strcpy , 代之libsafe版本的gets, strcpy 等等，这个机制最晚可在（）阶段实施。  
+>A 代码编写  B 编译  C 运行  D代码审计  
+ 
+9.沙箱是一种基于（）的安全机制。  
+>A 隔离   B 缺省安全   C 模块化   D密码学  
+
+10.RM的NEAT原则的E的含义是：（）
+>A 可评估  B 不可绕过   C 持续可用   D 防篡改  
 
 #### 判断对错  
 1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
@@ -180,6 +192,11 @@ E Send coins that never belonged to him
 24.保护模式同实模式的根本区别是管理员用户受保护与否。×  
 25.XSS是Web相关常见的脆弱性之一。√  
 26.威胁是外因，脆弱性是内因，二者结合造成安全事件的发生。√  
+27.一个访问控制矩阵，如果按列存储，那么就是ACL；而按行存储，就是Capabilities。√  
+28.一个访问控制矩阵，如果按行存储，那么就是ACL；而按列存储，就是Capabilities。×  
+29.一次一密机制的vernam方案不满足完善保密性。×  
+30.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其先验概率，则该密码体制满足完善保密性。√  
+31.一个密码体制，x为明文，y为密文，如果给定x，y的后验概率等于其先验概率，则该密码体制满足完善保密性。×  
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
