--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -1,16 +1,25 @@
 #### 概念与术语  
 【信息】（香农1948）任何可以减少不确定性的事物均为信息。  
-【信息系统】（GB 17859）  
+【信息系统】（GB 17859）计算机信息系统是由计算机及其相关的和配套的设备、设施(含网络)构成的，按照一定的应用目标 和规则对信息进行采集、加工、存储、传输、检索等处理的人机系统。  
 【信息资产】有价值的信息和信息系统，其价值可能是购买、维护信息系统的资金投入，或信息本身的经济价值，也可能是信息被窃取或破坏后对拥有者及其他人造成的损害，损害价值的评估既包括直接损失，也包括失去客户、投资者和名誉乃至法律责任的间接损失。  
 【威胁】能够对信息资产产生破坏或滥用的潜在外部因素。既包括人为因素，也包括自然界和物理环境的因素。其中人为因素既包括来自合法用户的也包括来自非授权用户的，既包括故意的攻击也包括无意的误操作。
 【威胁主体】能够产生威胁的实体。  
 【安全机制】用来对抗威胁、避免安全事件发生的技术和方法。  
 【脆弱性】存在于信息系统中的一些弱点，可能被威胁利用从而产生对资产的破坏和滥用。  
-【风险评估】  【风险】  
-【定性/定量风险评估】  
+【风险评估】  
+【风险】The potential that a given threat will exploit vulnerabilities of an asset or group of assets and thereby cause harm to the organization。  
+【定性/定量风险评估】
+【社会工程】
+【主动攻击】  
+【被动攻击】  
 【机密性】信息不被未授权获取的性质。  
 【完整性】信息不被未授权更改的性质。
-【数据完整性】  【系统完整性】  【可用性】  【真实性】  【认证/身份鉴别】  【accountability（可追溯性）】  【审计】  
+【数据完整性】  
+【系统完整性】  【可用性】  【真实性】  
+【认证/身份鉴别】通过用户提交的附加信息，对主体身份进行证实的过程。  
+【非否认服务】防止参与某次通信交换的一方事后否认本次交换曾经发生过的服务称为非否认服务。  
+【accountability（可追溯性）】  
+【审计】  
 【攻击面】  【攻击树】  
 【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】  【密码学】  【明文】  【密文】  【加密算法】  
 【可证明安全】  
@@ -111,7 +120,14 @@
 
 27.简单介绍支持向量机的思想和方法。
 
-28.简单介绍神经网络、DNN及卷积神经网络。
+28.简单介绍神经网络、DNN及卷积神经网络。  
+
+29.BLP模型与Biba模型的区别是什么?  
+>BLP模型是机密性模型，访问规则是上写下读，Biba模型是完整性模型，访问访问规则是上读下写。
+
+30.导致公钥密码算法出现的对称密码的几个主要问题是什么?  
+>密钥管理的密钥爆炸问题、密钥分配中的可信通道问题、和难以实现非否认。
+
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -127,6 +143,10 @@
 9.如果能把所有的交易信息（账目），组织成为一个不可篡改的链表，就形成了自带对账功能的数字记账技术：【区块链】  
 10.一个访问控制矩阵，如果按列存储，那么就是【ACL】；而按行存储，就是【Capabilities】  
 11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。
+12.以我们学校的选课系统为例，风险是这样产生的，首先选课系统中保存着教学相关的重要信息，是具有价值的。有多大的价值呢？如果选课系统是请软件公司开发的，支付了100元钱，那么系统的价值【   】(A.相当于100元钱、B.远高于100元钱)。可能对系统产生潜在破坏的这些因素，例如病毒、网络攻击，叫做【   】，产生这些因素的主体，叫做XX主体。系统的弱点，例如没有打补丁、存在弱口令，叫做【   】。这三者结合起来，就构成了风险,风险涉及的安全事件就包括个人信息泄露、选课活动被破坏。  
+
+在密码学中，需要加密的消息叫做______，隐藏内容的过程叫做加密，被加密后的消息叫做密文
+
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
 > 命令注入  XSS  溢出  不安全算法  缺盐  
@@ -165,6 +185,60 @@ E Send coins that never belonged to him
 10.RM的NEAT原则的E的含义是：（）
 >A 可评估  B 不可绕过   C 持续可用   D 防篡改  
 
+11.防火墙的主要功能是（）。  
+>A 完整性检测  B 防垃圾邮件   C 安全审计  D访问控制  
+
+12.通过用户提交的附加信息，对主体身份进行证实的过程，称为()。  
+>A非否认   B访问控制   C身份认证    D公证  
+
+13.以下哪种攻击属于被动攻击。()  
+>A篡改  B重放   C窃听    D拒绝服务  
+
+14.通过欺骗管理员进行信息系统攻击的方式称为()。  
+>A重放    B arp欺骗   C社会工程   D合谋攻击  
+
+15.IP协议提供的是一种(  )的服务。  
+>A可靠无连接   B不可靠无连接     C不可靠有连接    D面向连接  
+
+16.MD5算法是（）的。  
+>A单向可逆   B单向不可逆   C双向可逆    D双向不可逆  
+
+17.指纹作为一种身份认证机制，属于（）。  
+>A KNOW STH   B HAVE STH    C BE STH   D SEE STH  
+
+18.以下哪个口令强度较好？（）  
+>A.QWERTYUIOP   B.19870909    C.ADMINISTRATOR   D.AFPKWIQNA  
+
+19.以下哪个是信息安全类的知名国际会议？  
+>A ACM CCS  B USENIX security  C IEEE S&P    D 以上都是  
+
+20.通过用户提交的附加信息，对主体身份进行证实的过程，称为：（）  
+>A.访问控制  B.标识   C.身份鉴别   D.授权  
+
+21*.Kerberos被用于在分布式网络环境下，引入一个可以信任的第三方，提供用户与()之间的鉴别服务。  
+>A.数据库系统      B.操作系统       C.服务器      D.CA  
+
+22.在PGP协议中，如果Alice想要给Bob发送一段加密文本，则会用到___的公钥，如果Bob想要在发给Alice的邮件中证明自己身份的真实性，则会用到()的私钥。  
+>A.Alice   B.Bob   C.CA    D.系统  
+
+23.以下安全服务，数字签名技术不能提供的是：()  
+>A 报文鉴别  B报文非否认  C报文加密  D实体鉴别  
+
+24.网络黑客篡改主页的行为，属于破坏信息安全哪个属性的行为？()  
+>A 机密性    B 完整性  C 可用性   D 非否认性   
+
+25.拒绝服务攻击，属于破坏信息安全哪个属性的行为？()  
+>A 机密性    B 完整性  C 可用性   D 非否认性  
+
+26.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？()  
+>A 机密性    B 完整性  C 可用性   D 非否认性  
+
+
+
+
+
+
+
 #### 判断对错  
 1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
 2.使用对称技术实现的消息鉴别码MAC常称之为篡改检测码MDC。×  
@@ -197,10 +271,60 @@ E Send coins that never belonged to him
 29.一次一密机制的vernam方案不满足完善保密性。×  
 30.一个密码体制，x为明文，y为密文，如果给定y，x的后验概率等于其先验概率，则该密码体制满足完善保密性。√  
 31.一个密码体制，x为明文，y为密文，如果给定x，y的后验概率等于其先验概率，则该密码体制满足完善保密性。×  
+32.与数据库关联较⼤的网络攻击⽅式是SQL注入;与JavaScript关联较大的攻击方式是XSS。√  
+33.通过欺骗管理理员进行信息系统攻击的⽅式称为社会工程。√  
+34.IP协议提供的是⼀一种可靠无连接的服务。×  
+35.IP协议提供的是⼀一种不可靠无连接的服务。√  
+36.篡改、重放和拒绝服务都不是被动攻击。√  
+37.加密过程可用公式Y=Ek(X)表示，其中Y、E、k、X分别表示明文、加密算法、密钥、密文。√  
+38.信息安全中，机密性比完整性更为重要。×  
+39.只有脆弱性，没有相关的威胁，则不构成风险。√  
+40.图灵在信息论中提出：“凡是在一种情况下能减少不确定性的任何事物都叫做信息”。√  
+41.信息安全风险评估必须输出定量化的评估结果。×  
+42.公钥发布在个人主页上，是一种不安全的做法。×  
+43.人们目前普遍应用的密码技术是可证明安全的，最好的密码算法是计算上不可破解的。×  
+44.在PGP协议中，如果Alice想要给Bob发送一段加密文本，则会用到Bob的公钥，如果Bob想要在发给Alice的邮件中证明自己身份的真实性，则会用到Bob的私钥。√  
+45.Hash函数通常满足以下属性：“Hash（A）＝a；Hash（B）＝b；IF（a≠b） THEN  A≠B”。√  
+46.网络服务中，防止参与某次通信交换的一方事后否认本次交换曾经发生过的服务称为非否认服务。√  
+47*.IPSEC中会用到：加密算法、数据校验算法、信息隐藏算法和数字签名算法。×  
+48.Diffie-Hellman协议的弱点是：用于数字签名计算量太大。×  
+49.Diffie-Hellman协议不能用于数字签名。√  
+50.有效期字段对于X.509数字证书来说，不是必要的。×  
+51.有效期字段对于X.509数字证书来说是必须的，因为随着时间的推移，计算能力增强，公私钥的位数需要增加。√  
+52.从网上下载的可执行文件要谨慎运行，因为文件中可能存在木马等恶意代码。√  
+53.QWERTYUIOP是弱口令。√    
+54.IEEE S&P 是信息安全类的国际会议，每年在欧洲召开，简称Oakland。×  
+55.IEEE S&P 是信息安全类的国际会议，每年在美国加州召开，简称Oakland。√  
+56.信息安全的基本属性包括：可用性、可靠性、机密性、完整性。×  
+57.采用密码技术难以保障的信息安全基本属性是可用性。√  
+58.通过用户提交的附加信息，对主体身份进行证实的过程，称为访问控制。×  
+59.由于蜜罐并不提供任何合法服务，所以蜜罐收到的外来访问基本都不是合法访问。√  
+60.蜜罐收到的外来访问基本都是合法访问。×  
+61.NIST=美国国家标准技术研究所，是美国进行标准研究的主要机构。√  
+62.NIST是欧洲进行标准研究的主要机构。×  
+63.弱口令不一定是6位以下的口令，安全的口令也可能是三、四位的口令。×  
+64.信息资产一定是具有价值的。√  
+65.IEEE是国际标准化组织，与IEC共同发布了若干国际信息安全类标准。×  
+66.ISO是国际标准化组织，与IEC共同发布了若干国际信息安全类标准。√  
+67.由于三重DES比DES更安全，所以可以断定DES的串联操作对于不同密钥的DES变换来说，因其不封闭，所以不能构成群。√  
+68.既然三重DES比DES更安全，所以可以断定DES的串联操作对于不同密钥的DES变换来说，因其封闭，所以可构成半群。×  
+69.数字签名技术不能提供报文鉴别服务。×  
+70.NAT技术工作在数据链路层。×  
+71.身份鉴别机制分为3种机制，口令属于know something的鉴别方式。√  
+72.包过滤防火墙工作在网络的数据链路层。×  
+73*.VPN可以工作在数据链路层，也可以工作在网络层。√  
+
+
+
+
+
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（x1-x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种编码方式，使得在通信时，码长的数学期望值低于2.6比特。  
+3.RSA算法中，公钥为7，私钥为23，n=187。假设消息M=87，请给出使用公钥加密的计算过程：C=（     ）。假设收到的密文为11，请给出使用私钥解密的计算过程：P=（      ）。
+
+
 
 #### 分析  
 1. 给一个加密变换，求C的概率分布，求Y|C的条件概率分布，分析说明其是否具有完善保密性。求H(P)、H(K)、H（C）。  
@@ -280,6 +404,13 @@ int main() {
 1.设计一段栈计算机指令，完成以下任务：y=x\*x+(a-b)  
 
 2.给定场景，设计模糊测试的方案。  
+
+#### 论述题  
+2013年6月，前中情局职员爱德华•斯诺登将两份绝密资料交给英国《卫报》和美国《华盛顿邮报》，并告之媒体何时发表。按照设定的计划，2013年6月5日，英国《卫报》先扔出了第一颗舆论炸弹：美国国家安全局有一项代号为"棱镜"的秘密项目，要求电信巨头威瑞森公司必须每天上交数百万用户的通话记录。6月6日，美国《华盛顿邮报》披露称，过去6年间，美国国家安全局和联邦调查局通过进入微软、谷歌、苹果、雅虎等九大网络巨头的服务器，监控美国公民的电子邮件、聊天记录、视频及照片等秘密资料。美国舆论随之哗然。  
+	2013年6月7日，在加州圣何塞视察的美国总统奥巴马做出回应，公开承认该计划。他强调说，这一项目不针对美国公民或在美国的人，目的在于反恐和保障美国人安全，而且经过国会授权，并置于美国外国情报监视法庭的监管之下。然而保护公民隐私组织对此予以强烈谴责，表示不管奥巴马政府如何以反恐之名进行申辩，不管多少国会议员或政府部门支持监视民众，这些项目都侵犯了的公民基本权利。  
+	问题1：针对“棱镜门”事件，美国国内涌现出两种声音。一些官员指责斯诺登的泄密行为损害国家利益，甚至将其定义为叛国行为。另一方面，很多民众抗议此类项目严重侵犯个人隐私，认为斯诺登维护了全球民众的隐私权。斯诺登究竟是叛徒，还是英雄？请谈谈你的看法。  
+	问题2：在信息时代一个主要的伦理议题就是信息的隐私权，在“棱镜门”事件中产生激烈冲突的问题也是对国家安全与个人隐私关系的争议。请结合自身实际，谈谈在网络环境下如何好保护个人隐私。  
+
 
 #### 其他样题  
 1.1900年，数学家（大卫·希尔伯特）提出了23个数学问题，其中第10问题，（丢番图）方程有解的可判定性问题，在1936年被（图灵）证明是不可判定的。
