--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -5,7 +5,7 @@
 【威胁】能够对信息资产产生破坏或滥用的潜在外部因素。既包括人为因素，也包括自然界和物理环境的因素。其中人为因素既包括来自合法用户的也包括来自非授权用户的，既包括故意的攻击也包括无意的误操作。
 【威胁主体】能够产生威胁的实体。  
 【安全机制】用来对抗威胁、避免安全事件发生的技术和方法。  
-【脆弱性】存在于信息系统中的一些弱点，可能被威胁利用从而产生对资产的破坏和滥用。  
+【脆弱性】A weakness of an asset or group of assets which can be exploited by one or more threats.       
 【风险评估】  
 【风险】The potential that a given threat will exploit vulnerabilities of an asset or group of assets and thereby cause harm to the organization。  
 【定性/定量风险评估】
@@ -15,20 +15,32 @@
 【机密性】信息不被未授权获取的性质。  
 【完整性】信息不被未授权更改的性质。
 【数据完整性】  
-【系统完整性】  【可用性】  【真实性】  
+【系统完整性】  
+【可用性】确保系统以足够的能力、预期的方式、可接受的性能提供服务。    
+【拒绝服务攻击】是指攻击者通过某种手段，有意地造成计算机或网络不能正常运转从而不能向合法用户提供所需要的服务或者降低其提供的服务质量。  
+【真实性】  
 【认证/身份鉴别】通过用户提交的附加信息，对主体身份进行证实的过程。  
 【非否认服务】防止参与某次通信交换的一方事后否认本次交换曾经发生过的服务称为非否认服务。  
 【accountability（可追溯性）】  
 【审计】  
-【攻击面】  【攻击树】  
-【Bayes定理】  【完善保密性】  【信息熵】  【无条件安全性】  【计算安全性】  【密码学】  【明文】  【密文】  【加密算法】  
+【攻击面】  
+【攻击树】  
+【Bayes定理】  
+【完善保密性】  
+【信息熵】  
+【无条件安全性】  
+【计算安全性】  
+【密码学】  
+【明文】  
+【密文】  
+【加密算法】  
 【可证明安全】  
 【非多项式有界量】函数f(n):N→R称为关于n的任意多项式无界的，IF对任意多项式p(n),存在一个自然数n0，使得对于任意n＞n0，都有f(n)＞p(n)。  
 【可忽略量】函数ℇ(n):N→R称为关于n的一个可忽略量（ℇ(n)可忽略），IF其倒数1/ℇ(n)是关于n的一个非多项式有界的量。  
 【压倒性概率】如果ℇ(n)是一个可忽略量，那么1-ℇ(n)就是一个压倒性的量/概率。  
 【计算不可区分】  
 【问题】问题为<Σ，L，φ>，其中，Σ：问题所用的符号集合。Σ*：Σ中有限串集合。其中L⊆Σ*：问题的所有实例集合。φ：L→Σ*。  
- 
+
 【判定问题】0，1∈Σ且φ（L)⊂{0，1},记为π=<Σ，L，φ>   
 
 【P问题】DTM多项式时间可解问题。  
@@ -133,7 +145,7 @@
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
 2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
 3.操作系统的保护模式同实模式的根本区别是【进程内存受保护与否】。  
-4.kerckhoffs原则是【          】。  
+4.kerckhoffs原则是【  密码算法的安全性应基于密钥的安全性，而不是基于算法的细节的安全性  】。  
 5.用（P,C,K,E,D）表示密码系统的三个空间和加解密算法，那么：  
 > ∀k∈K，∃【（ek∈E，dk∈D）】∀x∈P【（dk（ek（x））=x）】  
 
@@ -142,10 +154,19 @@
 8.BTC所使用的树形Hash数据结构称之为【Merkle】树。  
 9.如果能把所有的交易信息（账目），组织成为一个不可篡改的链表，就形成了自带对账功能的数字记账技术：【区块链】  
 10.一个访问控制矩阵，如果按列存储，那么就是【ACL】；而按行存储，就是【Capabilities】  
-11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。
-12.以我们学校的选课系统为例，风险是这样产生的，首先选课系统中保存着教学相关的重要信息，是具有价值的。有多大的价值呢？如果选课系统是请软件公司开发的，支付了100元钱，那么系统的价值【   】(A.相当于100元钱、B.远高于100元钱)。可能对系统产生潜在破坏的这些因素，例如病毒、网络攻击，叫做【   】，产生这些因素的主体，叫做XX主体。系统的弱点，例如没有打补丁、存在弱口令，叫做【   】。这三者结合起来，就构成了风险,风险涉及的安全事件就包括个人信息泄露、选课活动被破坏。  
+11.【抽象语法树AST】对PL语法结构进行抽象，作为程序的【中间表示】，可用于程序优化、分析及转换等。  
+12.以我们学校的选课系统为例，风险是这样产生的，首先选课系统中保存着教学相关的重要信息，是具有价值的。有多大的价值呢？如果选课系统是请软件公司开发的，支付了100元钱，那么系统的价值【 B  】(A.相当于100元钱、B.远高于100元钱)。可能对系统产生潜在破坏的这些因素，例如病毒、网络攻击，叫做【 威胁  】，产生这些因素的主体，叫做XX主体。系统的弱点，例如没有打补丁、存在弱口令，叫做【 脆弱性  】。这三者结合起来，就构成了风险,风险涉及的安全事件就包括个人信息泄露、选课活动被破坏。  
+13.在密码学中，需要加密的消息叫做【 明文 】，隐藏内容的过程叫做加密，被加密后的消息叫做密文。  
+14.访问控制中，对客体或客体中所含资源请求访问的主动实体称为【 主体 】。  
+15.【 口令  】机制是身份鉴别中最常用的机制。  
+16.Kerberos是一种基于【 对称 】密码的鉴别机制。  
+17.任何访问控制策略最终均可被模型化为访问控制【 矩阵 】形式。  
+18.Bell-Lapadula模型是一种机密性模型，Biba模型是一种【 完整 】性模型。  
+19.访问控制列表机制（ACL）最适合于有相对【 少 】的需要被区分的用户，并且这些用户中的绝大多数是稳定的情况。如果访问控制列表太大或经常改变，维护访问控制列表会成为最主要的问题。  
+20.缓冲区溢出攻击的主要原因是C语言本身缺乏【 边界完整性 】检查。  
+21.【  特洛伊木马  】是一种隐藏在具有一定使用功能的程序（称为载体程序或外壳程序）中的一段非法的代码。  
+22.一次性口令确保每次的鉴别口令在使用后作废，可以应对【重放】攻击。  
 
-在密码学中，需要加密的消息叫做______，隐藏内容的过程叫做加密，被加密后的消息叫做密文
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
@@ -233,8 +254,19 @@ E Send coins that never belonged to him
 26.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？()  
 >A 机密性    B 完整性  C 可用性   D 非否认性  
 
+27.在银行环境中实行的访问控制策略中，用户分为了出纳员、系统管理员、顾客、管理者和审计员。该策略最有可能是（    ）。  
+>A 强制访问控制策略   B自主访问控制策略  C基于角色的访问控制策略  D BLP访问控制策略  
 
+28.(  )策略组合了商业的自主和法律上的强制控制。其目标是阻止引起利益冲突的信息流。业务服务员可以代表在同一个业务部门的几个客户，这将引起利益冲突。  
+>A BLP策略   B中国墙策略   C Biba策略    DClark-Wilson策略  
 
+29*.隐蔽通道利用共享资源作为通信通路，这要求空间共享或时间共享。（      ）使用共享资源的属性。（    ）使用在对共享资源访问中的时态或排序关系。  
+>A 隐蔽网络通道   B隐蔽数据库信道     C隐蔽存储信道    D隐蔽定时信道  
+
+30.以下哪个不是信息安全工具（       ）  
+>A 腾讯安全管家   B Wire Shark   C Eclipse    D  PGP  
+
+31.
 
 
 
@@ -313,6 +345,15 @@ E Send coins that never belonged to him
 71.身份鉴别机制分为3种机制，口令属于know something的鉴别方式。√  
 72.包过滤防火墙工作在网络的数据链路层。×  
 73*.VPN可以工作在数据链路层，也可以工作在网络层。√  
+74.数字签名具有这样的特点：1）其他人无法伪造；2）发送者不能抵赖；3）接收者可以验证内容、作者及其签名的时间；4）有争议时，可由第三方进行验证。√  
+75.企业的安全问题应主要从技术角度进行解决，管理上只要差不多就行了。×  
+76.使用不安全的密码，比不使用密码更危险。√  
+77.二战中，由于德国人的严谨性，他们发送的电报的格式遵循完全相同的格式，发送时间也非常准时，这使得图灵对德军密码的破解变得极为困难。×  
+78.RSA公钥加密算法的加密密钥跟解密密钥完全没有关系，是不可能相互推导出来的。×  
+79*.企业的安全问题应当由技术部门和一线员工发起，自下而上地逐步反映到管理层。×  
+80.社会工程是指为非法获得信息采取的技术手段。×  
+81.信息系统并不是越安全就越好。√  
+
 
 
 
@@ -406,10 +447,13 @@ int main() {
 2.给定场景，设计模糊测试的方案。  
 
 #### 论述题  
-2013年6月，前中情局职员爱德华•斯诺登将两份绝密资料交给英国《卫报》和美国《华盛顿邮报》，并告之媒体何时发表。按照设定的计划，2013年6月5日，英国《卫报》先扔出了第一颗舆论炸弹：美国国家安全局有一项代号为"棱镜"的秘密项目，要求电信巨头威瑞森公司必须每天上交数百万用户的通话记录。6月6日，美国《华盛顿邮报》披露称，过去6年间，美国国家安全局和联邦调查局通过进入微软、谷歌、苹果、雅虎等九大网络巨头的服务器，监控美国公民的电子邮件、聊天记录、视频及照片等秘密资料。美国舆论随之哗然。  
+1.2013年6月，前中情局职员爱德华•斯诺登将两份绝密资料交给英国《卫报》和美国《华盛顿邮报》，并告之媒体何时发表。按照设定的计划，2013年6月5日，英国《卫报》先扔出了第一颗舆论炸弹：美国国家安全局有一项代号为"棱镜"的秘密项目，要求电信巨头威瑞森公司必须每天上交数百万用户的通话记录。6月6日，美国《华盛顿邮报》披露称，过去6年间，美国国家安全局和联邦调查局通过进入微软、谷歌、苹果、雅虎等九大网络巨头的服务器，监控美国公民的电子邮件、聊天记录、视频及照片等秘密资料。美国舆论随之哗然。  
 	2013年6月7日，在加州圣何塞视察的美国总统奥巴马做出回应，公开承认该计划。他强调说，这一项目不针对美国公民或在美国的人，目的在于反恐和保障美国人安全，而且经过国会授权，并置于美国外国情报监视法庭的监管之下。然而保护公民隐私组织对此予以强烈谴责，表示不管奥巴马政府如何以反恐之名进行申辩，不管多少国会议员或政府部门支持监视民众，这些项目都侵犯了的公民基本权利。  
 	问题1：针对“棱镜门”事件，美国国内涌现出两种声音。一些官员指责斯诺登的泄密行为损害国家利益，甚至将其定义为叛国行为。另一方面，很多民众抗议此类项目严重侵犯个人隐私，认为斯诺登维护了全球民众的隐私权。斯诺登究竟是叛徒，还是英雄？请谈谈你的看法。  
 	问题2：在信息时代一个主要的伦理议题就是信息的隐私权，在“棱镜门”事件中产生激烈冲突的问题也是对国家安全与个人隐私关系的争议。请结合自身实际，谈谈在网络环境下如何好保护个人隐私。  
+
+2.“911”事件之后，美国不仅发布了强化金融容灾能力白皮书，制定COOP计划确定政府容灾能力下限，还通过了“爱国者法案”，允许大规模监控民众通信，以提升政府的反恐能力。有人认为，这种牺牲个人隐私保护国家安全的做法，是十分正确的措施。你怎么看？  
+
 
 
 #### 其他样题  
