--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -57,8 +57,8 @@
 【强制访问控制】  
 【自主访问控制】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
-【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。
-
+【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。  
+【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
 #### 简答  
@@ -353,7 +353,7 @@ E Send coins that never belonged to him
 79*.企业的安全问题应当由技术部门和一线员工发起，自下而上地逐步反映到管理层。×  
 80.社会工程是指为非法获得信息采取的技术手段。×  
 81.信息系统并不是越安全就越好。√  
-
+82.模糊测试属于白盒测试。×  
 
 
 
