--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -55,10 +55,17 @@
 【访问控制】在主体和客体及资源之间的信息流动进行安全相关的控制。信息的读写流动称之为【访问】，发起访问的主动实体称之为【主体】，被访问的实体称之为【客体】  
 【访问控制策略】  
 【强制访问控制】  
+【安全标记】  
+【潜信道/潜通道/阈下通道】
 【自主访问控制】  
 【缓冲区溢出】指程序运行时，边界检查不严格的缓冲区被用户输入数据污染所导致的安全问题。溢出数据可通过覆盖返回地址、临时变量、指针等对程序控制流进行劫持，完成恶意行为。  
 【软件安全缺陷】即安全漏洞，是软件在设计、实现、配置、运行时的安全弱点，可导致软件因非预期操作产生机密性、数据或系统完整性、可用性等安全属性的破坏。  
 【模糊测试】通过向程序输入非预期的数据，并监控其输出或状态的异常，来发现程序中故障的方法。  
+【程序的正确性】
+【程序的部分正确性】
+
+
+
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
 #### 简答  
@@ -266,8 +273,8 @@ E Send coins that never belonged to him
 30.以下哪个不是信息安全工具（       ）  
 >A 腾讯安全管家   B Wire Shark   C Eclipse    D  PGP  
 
-31.
-
+31.迄今为止，因（）领域成果获得图灵奖的人数是最多的。
+>A 密码学  B 人工智能  C 计算复杂性理论   D程序设计语言与编译器  
 
 
 
@@ -283,9 +290,10 @@ E Send coins that never belonged to him
 9.网络安全中有一些任务需要对代码进行分析，获取其复杂的业务逻辑，是否存在安全漏洞，机器学习方法很适用于这项工作。×  
 10.OS管理的虚拟内存空间中，内核空间与用户空间谁在低地址处取决于数据的大小端模式。×  
 11.如数据采取大端模式，则内核空间在低地址处，否则在高地址处。×  
-12.如果程序员编写程序的时候使用了栈数据结构的多少，会影响该程序发生栈缓冲区溢出的概率。×  
+12.程序员编写程序的时候使用的栈数据结构的多少，会影响该程序发生栈缓冲区溢出的概率。×  
 13.CPU的体系结构对栈溢出的发生具有一定的影响。√  
 14.BTC的智能合约语言是图灵完备的。×  
+14+.正则语言不是图灵完备的。√  
 15.Clark-Wilson是一个确保商业数据完整性的访问控制策略模型,由计算机科学家David D. Clark和会计师Davicl R.Wilson提出的。√  
 16.通过缓冲区溢出导致程序崩溃的先决条件是free() 函数未检查fd/bk指针。×  
 17.通过缓冲区溢出实现代码注入的先决条件是栈地址已知，栈可执行。√  
@@ -354,7 +362,7 @@ E Send coins that never belonged to him
 80.社会工程是指为非法获得信息采取的技术手段。×  
 81.信息系统并不是越安全就越好。√  
 82.模糊测试属于白盒测试。×  
-
+83.如程序是部分正确且是终止的，则其为正确的。  
 
 
 
